# serial_driver_dummy

serial_driver_library/: CMakeLists.txt  package.xml
serial_driver_library/inc/serial_driver/: MSP.hpp
serial_driver_library/src/: MSP.cpp
serial_driver_node/: CMakeLists.txt  package.xml
serial_driver_node/src/: serial_driver_node.cpp
