<?xml version="1.0"?>
<package format="2">
  <name>serial_driver_node</name>
  <version>0.0.0</version>
  <description>serial_driver_node</description>

  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>

  <license>BSD</license>

  <author email="Rauch.Christian@gmx.de">Christian Rauch</author>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>serial_driver_library</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
